[gd_scene load_steps=5 format=2]

[ext_resource path="res://Src/Outgame/MultiScenes.gd" type="Script" id=1]
[ext_resource path="res://font/Colored Crayons.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="create_hero" type="Button" parent="."]
margin_left = 739.87
margin_top = 196.128
margin_right = 864.87
margin_bottom = 250.128
text = "Create Hero"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map_fight_1" type="Button" parent="."]
margin_left = 16.8022
margin_top = 398.997
margin_right = 195.802
margin_bottom = 471.997
text = "Map Fight 1"

[node name="Map_fight_2" type="Button" parent="."]
margin_left = 231.992
margin_top = 393.293
margin_right = 417.992
margin_bottom = 468.293
text = "Map Fight 2"

[node name="map_fire" type="Button" parent="."]
margin_left = 159.772
margin_top = 96.6336
margin_right = 269.772
margin_bottom = 182.634
text = "Map Fire"

[node name="Sign In" type="Button" parent="."]
margin_left = 725.505
margin_top = 114.138
margin_right = 863.505
margin_bottom = 165.138
text = "Sign In"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="Button" parent="."]
margin_left = 24.0
margin_top = 554.0
margin_right = 142.0
margin_bottom = 608.0
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rewards" type="Button" parent="."]
margin_left = 179.0
margin_top = 555.0
margin_right = 296.0
margin_bottom = 610.0
text = "Rewards"

[node name="Map_water" type="Button" parent="."]
margin_left = 16.508
margin_top = 254.282
margin_right = 183.508
margin_bottom = 327.282
text = "Map Water"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Button" parent="."]
margin_left = 844.952
margin_top = 546.545
margin_right = 946.952
margin_bottom = 619.545
text = "Stats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Death" type="Button" parent="."]
margin_left = 319.911
margin_top = 549.0
margin_right = 436.911
margin_bottom = 622.0
text = "Death"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next_level" type="Button" parent="."]
margin_left = 697.407
margin_top = 547.455
margin_right = 819.407
margin_bottom = 620.455
text = "Next_level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map_tuto" type="Button" parent="."]
margin_left = 14.0
margin_top = 102.0
margin_right = 129.0
margin_bottom = 175.0
text = "Map Tuto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map2" type="Label" parent="."]
margin_left = -2.09747
margin_top = -0.902496
margin_right = 542.903
margin_bottom = 47.0975
custom_fonts/font = SubResource( 1 )
text = "Map"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Init2" type="Label" parent="."]
margin_left = 551.0
margin_top = 3.0
margin_right = 1027.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
text = "Init"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="map_fire_0" type="Button" parent="."]
margin_left = 302.0
margin_top = 98.0
margin_right = 397.0
margin_bottom = 188.0
text = "Map Fire 0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="create_hero" to="." method="_on_create_hero_pressed"]
[connection signal="pressed" from="Map_fight_1" to="." method="_on_Map_fight_1_pressed"]
[connection signal="pressed" from="Map_fight_2" to="." method="_on_Map_fight_2_pressed"]
[connection signal="pressed" from="map_fire" to="." method="_on_map_level_pressed"]
[connection signal="pressed" from="Sign In" to="." method="_on_Sign_In_pressed"]
[connection signal="pressed" from="Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="Rewards" to="." method="_on_Rewards_pressed"]
[connection signal="pressed" from="Map_water" to="." method="_on_Map_water_pressed"]
[connection signal="pressed" from="Stats" to="." method="_on_Stats_pressed"]
[connection signal="pressed" from="Death" to="." method="_on_Death_pressed"]
[connection signal="pressed" from="Next_level" to="." method="_on_Next_level_pressed"]
[connection signal="pressed" from="Map_tuto" to="." method="_on_Map_tuto_pressed"]
[connection signal="pressed" from="map_fire_0" to="." method="_on_map_fire_0_pressed"]
